--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <a class="nav-link" href="../index.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="linking/contact.html">Contact</a>
             </li>
             <li class="nav-item">
             <A class="nav-link" href="www.linkedin.com/in/tonipowell13">LinkedIn</A>
