--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="../index.html">About</a>
+                <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
