--- a/linking/contact.html
+++ b/linking/contact.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="#">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <A class="nav-link" href="linkedin.com/in/tonipowell13">LinkedIn</A>
+                    <A class="nav-link" href="https://www.linkedin.com/in/tonipowell13">LinkedIn</A>
                  </li>
             </ul>
         </div>
