--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-            <A class="nav-link" href="linkedin.com/in/tonipowell13">LinkedIn</A>
+            <A class="nav-link" href="https://www.linkedin.com/in/tonipowell13">LinkedIn</A>
           </li>
         </ul>
     </div>
