--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <!-- BULMA -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+  <!-- CSS -->
   <link rel="stylesheet" href="linking/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- FONT AWESOME  -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+  <!-- JQUERY -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <Title>Toni Powell</Title>
 </head>
   <!-- Start Nav -->
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="mx-auto px-2 order-0">
-        <a class="navbar-brand mx-auto" href="#">Toni Powell</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-            <span class="navbar-toggler-icon"></span>
+  <!-- <nav class="navbar">
+    <div class="">
+        <a class="" href="#">Toni Powell</a>
+        <button class="" type="button" data-toggle="collapse" data-target="">
+            <span class=""></span>
         </button>
     </div>
-      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
+      <div class="">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
@@ -30,6 +35,14 @@
             </li>
         </ul>
     </div>
+</nav> -->
+
+<nav class="navbar">
+  <a class="navbar-brand is-large" href="#">Toni Powell</a>
+  <nav class="navbar-end">
+    <a>Portfolio</a>
+    <a>Contact</a>
+  </nav>
 </nav>
 
 <!-- End Nav -->
@@ -40,7 +53,7 @@
     <div class="row">
     <h1 class="px-2">About Me</h1>
     <div class="col-sm col-md col-lg my-3">
-      <img src="linking/abel.jpg" alt="laughing-photo">
+      <img src="images/abel.jpg" alt="laughing-photo">
     </div>
 
 
@@ -73,5 +86,7 @@
     <A href="https://www.linkedin.com/in/tonipowell13">LinkedIn</A>
   </div>
 </footer>
+<!-- JS -->
+<script src="portfolio.js"></script>
 </body>
 </html>
