--- a/linking/contact.html
+++ b/linking/contact.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
+        <!-- BOOTSTRAP -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">    
+        <!-- CSS -->
         <link rel="stylesheet" href="contact.css">
+        <!-- FONT AWESOME -->
         <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial scale=1.0">
+          <!-- JQUERY -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <title>Get in touch!</title>
     </head>
     <!-- Start Nav --> 
@@ -72,6 +77,7 @@
           <A href="https://www.linkedin.com/in/tonipowell13">LinkedIn</A>
         </div>
       </footer>
+      <script src="portfolio.js"></script>
     </body>
 
 
