--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -2,14 +2,19 @@
 <html lang="en-us">
 
 <head>
-  <!-- add in CSS? Link other HTML  -->
-  
+
+    <!-- BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="stylesheet" href="portfolio.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="portfolio.css">
+    <!-- GOOGLE FONTS -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <!-- FONT AWESOME -->
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <title>Portfolio</title>
 </head>
 
@@ -102,19 +107,14 @@
   </div>
 
   <!-- footer info -->
-  
-  <!-- <div class="container-fluid text-center text-md-left">
-    <div class="row">
-      <div class="col-md-3 mb-md-0 mb-3">
-      </div>
-    </div>
-  </div> -->
   <footer class="page-footer font-small gray pt-4">
     <div class="footer-copyright text-center py-3 bg-dark">BS&T
       <a href="https://tonipow3ll.github.io/">Github</a>
       <A href="https://www.linkedin.com/in/tonipowell13">LinkedIn</A>
     </div>
   </footer>
-</body>    
+
+  <script src="portfolio.js"></script>
+  </body>    
 
   </html>
